...
        if let cell = tableCell as? AboutInfoTableViewCell {
            let idx = indexPath.row

            switch idx {
            case 0:
                cell.titleLabel.text = "Name"
                cell.valueLabel.text = "Phoenix Wu"

            case 1:
                cell.titleLabel.text = "Mobile"
                cell.valueLabel.text = "+xxx xxx xxx 993"

            case 2:
...
