...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="olK-9B-u13" id="DXt-hN-CMr"/>
                            <outlet property="delegate" destination="olK-9B-u13" id="nlO-mO-SdR"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Experience" id="N6e-NW-dP5">
                        <barButtonItem key="backBarButtonItem" title="Back" id="voT-K5-0Fq"/>
                    </navigationItem>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="qhk-CN-cMI" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="109.59999999999999" y="-319.79010494752629"/>
...
